style(market-service): enforce Java formatting