@@ -13,8 +13,7 @@ import org.junit.jupiter.api.Test;
 class WhatIfServiceTest {
     @Test
     void sendsOneOrderedBatchAndCalculatesDifferences() {
-        CapturingPredictionClient client =
-                new CapturingPredictionClient(List.of(200000L, 250000L, 150000L));
+        CapturingPredictionClient client = new CapturingPredictionClient(List.of(200000L, 250000L, 150000L));
         WhatIfService service = new WhatIfService(client);
         PropertyFeatures baseline = features(1500);
         List<PropertyFeatures> scenarios = List.of(features(1800), features(1200));
@@ -22,43 +21,27 @@ class WhatIfServiceTest {
         WhatIfResult result = service.compare(baseline, scenarios);
 
         assertThat(client.calls).hasSize(1);
-        assertThat(client.calls.getFirst())
-                .containsExactly(baseline, scenarios.get(0), scenarios.get(1));
+        assertThat(client.calls.getFirst()).containsExactly(baseline, scenarios.get(0), scenarios.get(1));
         assertThat(result.baselinePrediction()).isEqualTo(200000);
         assertThat(result.scenarios().get(0).priceDifference()).isEqualTo(50000);
-        assertThat(result.scenarios().get(0).percentageDifference())
-                .isEqualByComparingTo(new BigDecimal("25.00"));
+        assertThat(result.scenarios().get(0).percentageDifference()).isEqualByComparingTo(new BigDecimal("25.00"));
         assertThat(result.scenarios().get(1).priceDifference()).isEqualTo(-50000);
     }
 
     @Test
     void zeroBaselineReturnsNullPercentage() {
-        WhatIfService service = new WhatIfService(
-                properties -> List.of(0L, 100L)
-        );
+        WhatIfService service = new WhatIfService(properties -> List.of(0L, 100L));
 
-        WhatIfResult result = service.compare(
-                features(1500),
-                List.of(features(1800))
-        );
+        WhatIfResult result = service.compare(features(1500), List.of(features(1800)));
 
         assertThat(result.scenarios().getFirst().percentageDifference()).isNull();
     }
 
     private static PropertyFeatures features(double squareFootage) {
-        return new PropertyFeatures(
-                squareFootage,
-                3,
-                2,
-                2000,
-                7000,
-                5,
-                8
-        );
+        return new PropertyFeatures(squareFootage, 3, 2, 2000, 7000, 5, 8);
     }
 
-    private static final class CapturingPredictionClient
-            implements PredictionClient {
+    private static final class CapturingPredictionClient implements PredictionClient {
         private final List<Long> predictions;
         private final List<List<PropertyFeatures>> calls = new ArrayList<>();
 
